salesforce-pm-system/force-app/main/default/objects/Project_Member__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <label>Allocation %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>100</defaultValue>
</CustomField>