salesforce-pm-system/force-app/main/default/objects/Project_Member__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>MasterDetail</type>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Members</relationshipLabel>
    <relationshipName>Project_Members</relationshipName>
</CustomField>