salesforce-pm-system/force-app/main/default/objects/Project_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
                <default>true</default>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>