salesforce-pm-system/force-app/main/default/objects/Project_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Memberships</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>